# routing-1

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
LaTex/: generate_tables.py  report.tex  result_sources.tex  tables_alt_strategy.tex  tables_arcflags_sweep.tex  tables_europe.tex  tables_poland.tex  tables_random_pairs.tex
queries/: europe_ranged_q1000_s1.json  poland_random_q1000_s2.json  poland_ranged_q1000_s1.json
results/: alt_default_poland_20260613T040140.json  alt_default_poland_20260613T043401.json  alt_farthest-16-active-4_poland_20260613T203137.json  alt_planar-16-active-4_poland_20260613T203340.json  alt_random-16-active-4_poland_20260613T203227.json  alt_random-pairs-farthest-16-active-4_poland_20260613T205100.json  alt_reduced-q10_poland_20260613T011800.json  arcflags_default_poland_20260613T041134.json  arcflags_inertial-32_16t_poland_20260613T161928.json  arcflags_inertial-32_16t_poland_20260613T164746.json  arcflags_inertial-32_16t_poland_20260613T171345.json  arcflags_inertial-32_bs1_16t_poland_20260613T173814.json  arcflags_inertial-64_bs1_16t_poland_20260613T181258.json  arcflags_inertial-64_poland_20260613T114538.json  arcflags_kaminpar-64_16t_poland_20260613T204500.json  arcflags_random-pairs-kaminpar-64_16t_poland_20260613T205100.json  astar_default_europe_20260613T190438.json  astar_default_poland_20260613T040113.json  astar_random-pairs_poland_20260613T205100.json  astar_reduced-q10_poland_20260613T011400.json  bidi_astar_default_poland_20260613T040317.json  bidi_astar_random-pairs_poland_20260613T205100.json  bidi_astar_reduced-q10_poland_20260613T012700.json  bidijkstra_default_europe_20260613T052957.json  bidijkstra_default_poland_20260613T040232.json  bidijkstra_random-pairs_poland_20260613T205100.json  bidijkstra_reduced-q10_poland_20260613T012200.json  ch_default_poland_20260613T013500.json  ch_default_poland_20260613T040417.json  ch_lazy_edgediff_dach_20260613T023320.json  ch_random-pairs_poland_20260613T205100.json  chase_default_poland_20260613T014500.json  chase_default_poland_20260613T042145.json  chase_random-pairs_poland_20260613T205100.json  dijkstra_default_europe_20260613T051741.json  dijkstra_default_poland_20260613T040011.json  dijkstra_random-pairs_poland_20260613T205100.json  dijkstra_reduced-q10_poland_20260613T010900.json  hl_fraction-0.05_poland_20260613T113450.json  hl_random-pairs_fraction-0.05_poland_20260613T205100.json
src/algorithms/: astar.cpp  astar.hpp  bidirectional_astar.cpp  bidirectional_astar.hpp  bidirectional_dijkstra.cpp  bidirectional_dijkstra.hpp  dijkstra.cpp  heap_node.hpp  heuristic.hpp  partition.cpp  partition.hpp  phast.cpp  phast.hpp  region_flags.cpp  region_flags.hpp  routing_algorithm_factory.cpp  routing_algorithm_factory.hpp  routing_instance.cpp  routing_instance.hpp  routing_preprocessing_context.cpp  routing_preprocessing_context.hpp  shortest_paths.cpp  shortest_paths.hpp  stopwatch.hpp
src/algorithms/alt/: alt.cpp  alt.hpp  landmarks.cpp  landmarks.hpp
src/algorithms/arcflags/: arc_flags.cpp  arc_flags.hpp  arc_flags_io.cpp  arc_flags_io.hpp
src/algorithms/ch/: ch_io.cpp  ch_io.hpp  contraction_hierarchy.cpp  contraction_hierarchy.hpp  witness_search.cpp  work_graph.cpp
src/algorithms/chase/: chase.cpp  chase.hpp
src/algorithms/hl/: hub_labels.cpp  hub_labels.hpp
src/apps/: bench_replay_main.cpp  bench_utils.hpp  benchmark_main.cpp  ch_measure_main.cpp  import_main.cpp  query_gen_main.cpp  query_main.cpp  write_benchmark_graph.cpp
src/graph/: geometry.cpp  geometry.hpp  graph.cpp  graph.hpp  graph_io.cpp  graph_io.hpp  reverse_graph.cpp  reverse_graph.hpp  types.hpp
src/io/: arc_flags_io.cpp  arc_flags_io.hpp  binary_io.hpp  ch_io.cpp  ch_io.hpp  graph_io.cpp  graph_io.hpp
src/routing/: routing.hpp
tests/: astar_heuristics_test.cpp  graph_fixtures.hpp  graph_io_test.cpp  graph_test.cpp  partition_test.cpp  reverse_graph_test.cpp  routing_algorithm_factory_test.cpp  routing_algorithms_test.cpp  routing_instance_test.cpp  routing_test_utils.hpp
tests/algorithms/: phast_test.cpp  routing_preprocessing_context_test.cpp
tests/algorithms/alt/: alt_test.cpp
tests/algorithms/arcflags/: arc_flags_test.cpp
tests/algorithms/ch/: ch_io_test.cpp
tests/algorithms/chase/: chase_test.cpp
tests/algorithms/hl/: hub_labels_test.cpp
